# MalVec

./: .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  Dockerfile  LESSON_PLAN.md  LICENSE  Makefile  MalVec_Dataset_Recommendations.md  NORTHSTAR.md  PROJECT_BRIEF.md  README.md  README_corrected.md  ROADMAP.md  SECURITY.md  START_HERE.md  project_knowledge.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: README.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PRODUCT_VISION.md  Phase7_Handover.md  SECURITY.md  USER_GUIDE.md  lessons_learned.md
lessons/: README.md
lessons/novice/: lesson_00_what_is_malvec.md  lesson_01_project_foundation.md  lesson_02_ember_integration.md  lesson_03_embedding_generation.md  lesson_04_vector_database.md  lesson_05_knn_classification.md  lesson_06_cli_usage.md  lesson_07_binary_pipeline.md
lessons/professional/: lesson_00_malvec_in_context.md  lesson_01_production_architecture.md  lesson_02_ember_feature_engineering.md  lesson_03_embedding_architecture.md  lesson_04_vector_storage.md  lesson_05_classification.md  lesson_06_cli_architecture.md  lesson_07_native_extraction.md
malvec/: __init__.py  audit.py  classifier.py  config.py  embedder.py  ember_loader.py  exceptions.py  extractor.py  features.py  isolation.py  model.py  progress.py  sandbox.py  validator.py  vector_store.py
malvec/cli/: __init__.py  archive.py  batch.py  classify.py  evaluate.py  info.py  train.py
scripts/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/polish/: __init__.py  test_model_archive.py  test_progress.py
tests/security/: __init__.py  test_audit.py  test_extractor_sandbox.py  test_sandbox.py
tests/unit/: __init__.py  test_classifier.py  test_cli.py  test_embedder.py  test_ember_loader.py  test_features.py  test_isolation.py  test_validator.py  test_vector_store.py
