[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "malvec"
version = "0.1.0"
description = "Malware detection via embedding-space analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "MalVec Team"}]
keywords = ["malware", "detection", "embeddings", "machine-learning", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mwill20/MalVec"
Repository = "https://github.com/mwill20/MalVec"
Documentation = "https://github.com/mwill20/MalVec/tree/master/docs"
Issues = "https://github.com/mwill20/MalVec/issues"
Changelog = "https://github.com/mwill20/MalVec/blob/master/CHANGELOG.md"

# ===========================
# Tool Configuration
# ===========================

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # assert used in tests
    "S603",  # subprocess calls (required for process isolation)
    "S607",  # partial executable path (required for subprocess)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks tests as security-critical",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "real_data: marks tests requiring actual EMBER dataset (not synthetic)",
]

[tool.coverage.run]
source = ["malvec"]
omit = [
    "tests/*",
    "malvec/cli/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]
